Implemented and integrated the DependencyContext, so that scoped dependencies can be resolved through a dynamic scope.

--- a/src/Kingo.TestEngine/02.Kingo.TestEngine.csproj
+++ b/src/Kingo.TestEngine/02.Kingo.TestEngine.csproj
@@ -17,6 +17,10 @@
     <None Include="..\Kingo.snk" Link="Properties\Kingo.snk" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Unity" Version="5.8.13" />
+  </ItemGroup>
+
   <ItemGroup>    
     <ProjectReference Include="..\Kingo\02.Kingo.csproj" />
   </ItemGroup>
