Implemented MicroProcessorConfiguration-design for the test-runner.

--- a/src/Kingo.TestEngine.Tests/01.Kingo.TestEngine.Tests.csproj
+++ b/src/Kingo.TestEngine.Tests/01.Kingo.TestEngine.Tests.csproj
@@ -25,7 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>    
-    <ProjectReference Include="..\Kingo.TestEngine\02.Kingo.TestEngine.csproj" />
+    <ProjectReference Include="..\Kingo.TestEngine\02.Kingo.TestEngine.csproj" />    
+    <ProjectReference Include="..\Kingo.Tests\01.Kingo.Tests.csproj" />
   </ItemGroup>
 
 </Project>
