--- a/src/Kingo.MicroServices.TestEngine.Tests/01.Kingo.MicroServices.TestEngine.Tests.csproj
+++ b/src/Kingo.MicroServices.TestEngine.Tests/01.Kingo.MicroServices.TestEngine.Tests.csproj
@@ -5,9 +5,9 @@
     <RootNamespace>Kingo</RootNamespace>
     <IsPackable>false</IsPackable>
     <AssemblyName>Kingo.MicroServices.TestEngine.Tests</AssemblyName>
+    <AssemblyDescription>Contains all unit tests for the Kingo.MicroServices.TestEngine library.</AssemblyDescription>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>    
   </PropertyGroup>
 
   <ItemGroup>
