--- a/src/Kingo.MicroServices/02.Kingo.MicroServices.csproj
+++ b/src/Kingo.MicroServices/02.Kingo.MicroServices.csproj
@@ -16,9 +16,10 @@
     <PackageProjectUrl>https://github.com/wimvangool/Kingo</PackageProjectUrl>
     <Authors>Wim van Gool</Authors>
     <RepositoryUrl>https://github.com/wimvangool/Kingo</RepositoryUrl>
-    <RepositoryType>GitHub</RepositoryType>
-    <VersionPrefix>4.0</VersionPrefix>
+    <RepositoryType>GitHub</RepositoryType>    
     <Company>Kingo</Company>
+    <Version Condition=" '$(BUILD_BUILDNUMBER)' == '' ">4.0</Version>
+    <Version Condition=" '$(BUILD_BUILDNUMBER)' != '' ">$(BUILD_BUILDNUMBER)</Version>
   </PropertyGroup>
 
   <ItemGroup>
