--- a/src/Kingo.MicroServices.Tests/01.Kingo.MicroServices.Tests.csproj
+++ b/src/Kingo.MicroServices.Tests/01.Kingo.MicroServices.Tests.csproj
@@ -7,7 +7,10 @@
     <AssemblyDescription>Contains all unit tests for the Kingo.MicroServices library.</AssemblyDescription>
     <RootNamespace>Kingo</RootNamespace>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>    
+    <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject />    
   </PropertyGroup>
 
   <ItemGroup>
