--- a/src/Kingo.MicroServices.TestEngine/02.Kingo.MicroServices.TestEngine.csproj
+++ b/src/Kingo.MicroServices.TestEngine/02.Kingo.MicroServices.TestEngine.csproj
@@ -16,7 +16,8 @@
     <PackageTags>MicroService Event-Driven BDD TDD Test</PackageTags>
     <Company>Kingo</Company>
     <Authors>Wim van Gool</Authors>
-    <Description>A library for creating Behavioral-Driven (Given-When-Then) tests for MicroServices built with the Kingo.MicroServices package.</Description>    
+    <Description>A library for creating Behavioral-Driven (Given-When-Then) tests for MicroServices built with the Kingo.MicroServices package.</Description>
+    <LangVersion>7.3</LangVersion>    
   </PropertyGroup>
 
   <ItemGroup>
