--- a/src/Kingo.MicroServices/02.Kingo.MicroServices.csproj
+++ b/src/Kingo.MicroServices/02.Kingo.MicroServices.csproj
@@ -7,7 +7,7 @@
     <AssemblyDescription>A library for building event-driven micro-services.</AssemblyDescription>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>    
-    <LangVersion>latest</LangVersion>    
+    <LangVersion>7.3</LangVersion>    
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>MicroService Event-Driven CQRS DDD SOA</PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
