--- a/src/Kingo.MicroServices.TestEngine/02.Kingo.MicroServices.TestEngine.csproj
+++ b/src/Kingo.MicroServices.TestEngine/02.Kingo.MicroServices.TestEngine.csproj
@@ -20,6 +20,10 @@
     <LangVersion>7.3</LangVersion>    
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>C:\Sources\Kingo\src\Kingo.MicroServices.TestEngine\Kingo.MicroServices.TestEngine.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="..\AssemblyInfo.solution.cs" Link="Properties\AssemblyInfo.solution.cs" />
   </ItemGroup>
