Implemented basic and recursive validation features.

--- a/src/Kingo.MicroServices.Tests/01.Kingo.MicroServices.Tests.csproj
+++ b/src/Kingo.MicroServices.Tests/01.Kingo.MicroServices.Tests.csproj
@@ -39,4 +39,19 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="MicroServices\Contracts\SomeCommandErrorMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>SomeCommandErrorMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="MicroServices\Contracts\SomeCommandErrorMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SomeCommandErrorMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
