--- a/src/MicroServices.Implementation.Core/03.Implementation.Core.csproj
+++ b/src/MicroServices.Implementation.Core/03.Implementation.Core.csproj
@@ -23,7 +23,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>C:\Sources\Kingo\src\Kingo.MicroServices\Kingo.MicroServices.xml</DocumentationFile>
+    <DocumentationFile>C:\Sources\Kingo\src\MicroServices.Implementation.Core\Kingo.MicroServices.Implementation.Core.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
