Moved HostedEndpoints to Endpoints.ServiceBus project.

--- a/src/MicroServices.Implementation.Endpoints.ServiceBus/03.Endpoints.ServiceBus.csproj
+++ b/src/MicroServices.Implementation.Endpoints.ServiceBus/03.Endpoints.ServiceBus.csproj
@@ -11,13 +11,29 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="MicroServices\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MicroServices.Implementation.Core\03.Implementation.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="ExceptionMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ExceptionMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="ExceptionMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ExceptionMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
