--- a/src/MicroServices.Contract.ServiceBus/04.Contract.ServiceBus.csproj
+++ b/src/MicroServices.Contract.ServiceBus/04.Contract.ServiceBus.csproj
@@ -25,6 +25,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MicroServices\02.SharedKernel.csproj" />
   </ItemGroup>
 
