--- a/src/MicroServices.Contract.ServiceBus/04.Contract.ServiceBus.csproj
+++ b/src/MicroServices.Contract.ServiceBus/04.Contract.ServiceBus.csproj
@@ -32,4 +32,19 @@
     <ProjectReference Include="..\MicroServices\02.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="ExceptionMessages.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ExceptionMessages.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="ExceptionMessages.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>ExceptionMessages.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
