Fixed a few project-settings and documentation.

--- a/src/MicroServices.Contract.Tests/01.Contract.Tests.csproj
+++ b/src/MicroServices.Contract.Tests/01.Contract.Tests.csproj
@@ -6,7 +6,8 @@
     <AssemblyName>Kingo.MicroServices.Contract.Tests</AssemblyName>
     <RootNamespace>Kingo</RootNamespace>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>C:\Sources\Kingo\src\Kingo.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
