--- a/src/MicroServices.Tests/01.SharedKernel.Tests.csproj
+++ b/src/MicroServices.Tests/01.SharedKernel.Tests.csproj
@@ -1,17 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-
     <IsPackable>false</IsPackable>
-
     <AssemblyName>Kingo.MicroServices.Tests</AssemblyName>
-
     <RootNamespace>Kingo</RootNamespace>
-
     <SignAssembly>true</SignAssembly>
-
-    <AssemblyOriginatorKeyFile>C:\Sources\Kingo\src\Kingo.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
