--- a/src/MicroServices.Contract.ServiceBus/04.Contract.ServiceBus.csproj
+++ b/src/MicroServices.Contract.ServiceBus/04.Contract.ServiceBus.csproj
@@ -3,10 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Kingo.MicroServices.Contract.ServiceBus</AssemblyName>
-    <RootNamespace>Kingo</RootNamespace>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>
-    <LangVersion>7.3</LangVersion>
+    <Description>Contains components to implement the Contract.ServiceBus-component(s) of a (Micro)Service.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
